Added section title to first column

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -14,7 +14,20 @@ h1 {
 }
 
 section {
-    background-color: aquamarine;
+    position: relative;
+    background-color: darkgrey;
+    border: 1px solid black;
+    margin: 25px;
+    padding: 35px 10px 20px;
+}
+
+.title1{
+    position: absolute;
+    background-color: pink;
+    border: 1px solid black;
+    top: 0;
+    right: 0;
+    padding: 5px 20px;
 }
 
 /* Simple responsive framework */
