--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -30,6 +30,15 @@ section {
     padding: 5px 20px;
 }
 
+.title2{
+    position: absolute;
+    background-color: pink;
+    border: 1px solid black;
+    top: 0;
+    right: 0;
+    padding: 5px 20px;
+}
+
 /* Simple responsive framework */
 div.row {
     background-color: aqua;
